// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VCheckbox.js should be disabled 1`] = `

<input aria-checked="false"
       disabled="disabled"
       role="checkbox"
       type="checkbox"
>

`;

exports[`VCheckbox.js should render themed component 1`] = `

<div class="v-input v-input--selection-controls v-input--checkbox theme--light">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <input aria-checked="false"
               role="checkbox"
               type="checkbox"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
        <i aria-hidden="true"
           class="v-icon theme--light material-icons"
        >
          check_box_outline_blank
        </i>
      </div>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VCheckbox.js should use custom icons 1`] = `

<div class="v-input v-input--selection-controls v-input--checkbox">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <input aria-checked="mixed"
               role="checkbox"
               type="checkbox"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
        <i aria-hidden="true"
           class="v-icon material-icons"
        >
          fizzbuzz
        </i>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VCheckbox.js should use custom icons 2`] = `

<div class="v-input v-input--selection-controls v-input--checkbox">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <input aria-checked="mixed"
               role="checkbox"
               type="checkbox"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
        <i aria-hidden="true"
           class="v-icon material-icons"
        >
          fizzbuzz
        </i>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VCheckbox.js should use custom icons 3`] = `

<div class="v-input v-input--selection-controls v-input--checkbox">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <input aria-checked="mixed"
               role="checkbox"
               type="checkbox"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
        <i aria-hidden="true"
           class="v-icon material-icons"
        >
          fizzbuzz
        </i>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;
